# algorithms

./: .gitignore  CMakeLists.txt  astyle.sh
ai-challenge-ants/cpp_starter_package/: Bot.cc  Bot.h  Makefile
codeforces/: 112a_petya_and_strings.cpp  116a_tram.cpp  118a_string_task.cpp  122a_lucky_devision.cpp  131a_caps_lock.cpp  133a_hq9+.cpp  158a_next_round.cpp  158b_taxi.cpp  160a_twins.cpp  1a_theatre_square.cpp  231a_team.cpp  263a_beautiful_matrix.cpp  266a_stones_on_the_table.cpp  281a_word_capitalization.cpp  282a_bit_plus_plus.cpp  339a_helpful_math.cpp  4a_watermelon.cpp  50a_domino_piling.cpp  58a_chat_room.cpp  71a_too_long_words.cpp  831a_unimodal_array.cpp  831b_keyboard_layouts.cpp  831c_jury_marks.cpp  832a_sasha_and_sticks.cpp  96a_football.cpp
hackerrank/: CMakeLists.txt
hackerrank/algorithms/: CMakeLists.txt
hackerrank/algorithms/bit_manipulation/: CMakeLists.txt  lonely_integer.cpp  maximizing_xor.cpp  sum_vs_xor.cpp
hackerrank/algorithms/graph_theory/: CMakeLists.txt  even_tree.cpp  roads_and_libraries.cpp
hackerrank/algorithms/greedy/: CMakeLists.txt  luck_balance.cpp  marcs_cakewalk.cpp  minimum_absolute_difference_in_an_array.cpp
hackerrank/algorithms/implementation/: CMakeLists.txt  angry_professor.cpp  append_and_delete.cpp  apple_and_orange.cpp  beautiful_days_at_the_movies.cpp  between_two_sets.cpp  birthday_chocolate.cpp  bon_appetit.cpp  breaking_the_records.cpp  cats_and_a_mouse.cpp  circular_array_rotation.cpp  counting_valleys.cpp  day_of_the_programmer.cpp  designer_pdf_viewer.cpp  divisible_sum_pairs.cpp  drawing_book.cpp  electronics_shop.cpp  find_digits.cpp  grading_students.cpp  happy_ladybugs.cpp  kangaroo.cpp  migratory_birds.cpp  picking_numbers.cpp  sequence_equation.cpp  sock_merchant.cpp  strange_counter.cpp  the_hurdle_race.cpp  utopian_tree.cpp  viral_advertising.cpp
hackerrank/algorithms/recursion/: CMakeLists.txt  password_cracker.cpp  recursive_digit_sum.cpp  the_power_sum.cpp
hackerrank/algorithms/search/: CMakeLists.txt  connected_cells_in_a_grid.cpp  gridland_metro.cpp  hackerland_radio_transmitters.cpp  ice_cream_parlor.cpp  knightl_on_a_chessboard.cpp  missing_numbers.cpp  pairs.cpp  sherlock_and_array.cpp
hackerrank/algorithms/sorting/: CMakeLists.txt  big_sorting.cpp  correctness_and_the_loop_invariant.cpp  counting_sort_1.cpp  counting_sort_2.cpp  insertion_sort_part_1.cpp  insertion_sort_part_2.cpp  intro_to_tutorial_challenges.cpp  quicksort_1_partition.cpp  running_time_of_algorithms.cpp  the_full_counting_sort.cpp
hackerrank/algorithms/strings/: CMakeLists.txt  alternating_characters.cpp  caesar_cipher.cpp  camelcase.cpp  funny_string.cpp  hackerrank_in_a_string.cpp  mars_exploration.cpp  pangrams.cpp  separate_the_numbers.cpp  super_reduced_string.cpp  two_characters.cpp  weighted_uniform_strings.cpp
hackerrank/data-structures/: CMakeLists.txt
hackerrank/data-structures/arrays/: 2darrays_ds.cpp  CMakeLists.txt  array_manipulation.cpp  arrays_ds.cpp  dynamic_array.cpp  left_rotation.cpp  sparse_arrays.cpp
